<resources>
    <string name="app_name">Options Menu Order Activity</string>
    <string name="action_settings">Settings</string>
    <string name="action_contact">Contact</string>
    <string name="action_order">Order</string>
    <string name="action_status">Status</string>
    <string name="action_favorites">Favorites</string>
    <string name="intro_text">Droid Desserts</string>

    <string name="action_order_message">You selected Order.</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="action_favorites_message">You selected Favorites.</string>
    <string name="action_contact_message">You selected Contact.</string>

    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>

    <string name="title_activity_order">Order Activity</string>

    <string name="choose_delivery_string">Choose a delivery method: </string>
    <string name="same_day_messenger_service">Same day messenger service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>

    <string name="chosen">"Chosen: "</string>

    <string name="snackbar_text">Chat with a human</string>
    <string name="mockup">Mock-up for layout</string>
    <string name="choose">Choose one dessert with your order:</string>
    <string name="donut">Donut</string>
    <string name="ice_cream_sandwich">Ice cream sandwich</string>
    <string name="froyo">Froyo</string>
    <string name="donut_description">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_description">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo_description">FroYo is premium self-serve frozen yogurt.</string>

</resources>
